--- a/index.html
+++ b/index.html
@@ -261,6 +261,16 @@
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
+<!-- begin code v 7.0 -->
+<span id="wts2203071"></span>
+<script>var wts=document.createElement('script');wts.async=true;
+wts.src='https://app.ardalio.com/wts7.js';document.head.appendChild(wts);
+wts.onload = function(){ wtsl7(2203071,3); };
+</script><noscript><img src="https://app.ardalio.com/7/3/2203071.png"></noscript>
+<!-- end code v 7.0 -->
+
+	
 </body>
+
 
 </html>
